--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,7 +1,7 @@
 // Normalize & CSS Reset
 
-@import "partials/normalize";
-@import "partials/reset";
+@import "reset/normalize";
+@import "reset/reset";
 
 // Variables and mixins
 
