--- a/app/styles/reset/_reset.scss
+++ b/app/styles/reset/_reset.scss
@@ -47,5 +47,7 @@ table {
 	border-spacing: 0;
 }
 *, *:before, *:after {
-  -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
  }
